--- a/google.html
+++ b/google.html
@@ -47,13 +47,13 @@
 
             <td class="card2">
                 <div>
-                    <a href="">Help!</a>
+                    <a href="https://web.archive.org/web/19990221212930if_/http://www.google.com/help.html">Help!</a>
                     <br>
-                    <a href="">About Google!</a>
+                    <a href="https://web.archive.org/web/19990427105230if_/http://www.google.com/about.html">About Google!</a>
                     <br>
-                    <a href="">Company İnfo</a>
+                    <a href="https://web.archive.org/web/19990221202430if_/http://www.google.com/company.html">Company İnfo</a>
                     <br>
-                    <a href="">Google!Logos</a>
+                    <a href="https://web.archive.org/web/19990224043535if_/http://www.google.com/stickers.html">Google!Logos</a>
     
                 </div>
 
